# ChunkingForPandas

./: .coverage  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  test.yml
app/: _chunk_1.csv  _chunk_10.csv  _chunk_11.csv  _chunk_12.csv  _chunk_13.csv  _chunk_14.csv  _chunk_15.csv  _chunk_16.csv  _chunk_17.csv  _chunk_18.csv  _chunk_19.csv  _chunk_2.csv  _chunk_20.csv  _chunk_21.csv  _chunk_22.csv  _chunk_23.csv  _chunk_24.csv  _chunk_25.csv  _chunk_26.csv  _chunk_27.csv  _chunk_28.csv  _chunk_29.csv  _chunk_3.csv  _chunk_30.csv  _chunk_4.csv  _chunk_5.csv  _chunk_6.csv  _chunk_7.csv  _chunk_8.csv  _chunk_9.csv  gradio_interface.py
benchmarks/: benchmark_optimizations.py
examples/: basic_usage.py  example_usage_optimised.py
src/chunking_experiment/: __init__.py  chunking_experiment.py  core.py  gradio_interface.py
src/chunking_pandas/: __init__.py  __main__.py  benchmark.py  cli.py  core.py  interface.py  visualization.py
src/chunking_pandas/data/: sample.csv
src/chunking_pandas/optimized/: cy_chunks.c  cy_chunks.pyx  nb_chunks.py
tests/: test_chunking_experiment.py  test_chunking_pandas.py
